--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 server:
   port: 8090
   fullAddress: ${HOST:http://localhost}:${PORT:${server.port}}
-  gatewayAddres: ${HOST_GATEWAY:http://localhost:8762}/${HOSTNAME:ms-productos-busqueda}
+  gatewayAddres: ${HOST_GATEWAY:http://localhost:8762}/ms-productos-busqueda
 
 
 ## Configuracion del cliente de Eureka
